[package]
name = "platinum"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { version = "0.8.12" }
femtovg = { version = "0.19.3", features = ["image-loading"] }
glutin = { version = "0.32.3" }
glutin-winit = { version = "0.5.0" }
image = { version = "0.25.8", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
winit = { version = "0.30.12", features = ["mint"] }

[features]
default = []
serde = [
  "dep:serde",
  "ahash/serde",
  "femtovg/serde",
  "image/serde",
  "winit/serde"
]
